# fabstir-llm-node

./: .env.contracts  .env.prod.example  .env.test.local.example  .gitignore  ALL-FIXES-v8.4.4-ENV-VARS-REQUIRED.md  BUILD_CHECKLIST.md  Cargo.toml  DEPLOYMENT-CHECKLIST-v8.13.1.md  DEPLOYMENT-CHECKLIST.md  Dockerfile.dev  Dockerfile.production  Dockerfile.production.risc0  GPU-STARK-PROOFS-VERIFICATION.md  INFERENCE_IMPLEMENTATION_SUMMARY.md  LLAMA_CPP_INTEGRATION.md  MAX_TOKENS_FIX_SUMMARY.md  PHASE_3.3_COMPLETE.md  README.md  REAL_LLAMA_INTEGRATION.md  UPGRADE-SUMMARY.md  VERSION  add_copyright_headers.sh  add_copyright_headers_fixed.sh  build.rs  create_test_files.sh  deploy-binary.sh  disable_all_caching.sh  docker-compose.phase4.yml  docker-compose.prod.wsl2.yml  docker-compose.prod.yml  docker-compose.s5-bridge.yml  docker-compose.s5-only.yml  docker-compose.two-nodes-only.yml  docker-compose.two-nodes.yml  docker-diffusion-sidecar.Dockerfile  fix_copyright_headers.sh  restart-and-deploy-openai.sh  restart-and-deploy.sh  restart-nodes-with-payments.sh  restart-production-nodes.sh  (+11 more)
.devcontainer/: Dockerfile  test-watcher.sh  yolo-runner.sh
benches/: embed_benchmark.rs
contracts/: JobMarketplace.json  JobMarketplaceFABWithS5-CLIENT-ABI.json  NodeRegistry.json  NodeRegistryFAB-CLIENT-ABI.json  NodeRegistryWithModels-CLIENT-ABI.json  PaymentEscrow.json  PaymentSplitter.json  README.md
deployment/: README.md  docker-compose.production.yml
deployment/phase-4.3.1/: docker-compose.phase-4.3.1-final.yml  docker-compose.phase-4.3.1-fixed.yml  docker-compose.phase-4.3.1-s5-ready.yml  docker-compose.real-fixed.yml  docker-compose.real-optimized.yml  docker-compose.real-with-sources.yml  docker-compose.real.yml
docker/: Dockerfile.diffusion-sidecar  Dockerfile.vlm-sidecar  entrypoint-diffusion.sh
docs/: API.md  BENCHMARKS.md  CHECKPOINT_BUGS_FIXED.md  CHECKPOINT_FIXES_SESSION_2.md  CHECKPOINT_SUBMISSION.md  DEPLOYMENT.md  DEPLOYMENT_TESTING_EMBEDDINGS.md  ENHANCED_S5_DEPLOYMENT.md  ERROR_HANDLING_AUDIT.md  EZKL_IMPLEMENTATION_GUIDE.md  EZKL_STATUS.md  Fabstir SDK → Fabstir-LLM-Node Communication Protocol Report.md  GPT-OSS-120B-UPGRADE-GUIDE.md  IMPLEMENTATION-CHECKPOINT-PUBLISHING.md  IMPLEMENTATION-CRYPTO.md  IMPLEMENTATION-EZKL.md  IMPLEMENTATION-KV-CACHE-QUANTIZATION.md  IMPLEMENTATION-LLAMA-UPGRADE-FA-FALLBACK.md  IMPLEMENTATION-MODEL-AGNOSTIC-INFERENCE.md  IMPLEMENTATION-MODEL-VALIDATION.md  IMPLEMENTATION-MULTI.md  IMPLEMENTATION-REMEDIATION-PRE-REPORT.md  IMPLEMENTATION-RISC0-2.md  IMPLEMENTATION-RISC0.md  IMPLEMENTATION-SECURITY-AUDIT-REMEDIATION.md  IMPLEMENTATION-SESSION-REINIT-FIX.md  IMPLEMENTATION-VLM-VISION.md  IMPLEMENTATION.md  IMPLEMENTATION2.md  IMPLEMENTATION_EMBEDDINGS.md  IMPLEMENTATION_HOST_SIDE_RAG.md  IMPLEMENTATION_IMAGE_PROCESSING.md  IMPLEMENTATION_PRICE_PRECISION.md  IMPLEMENTATION_PROOF.md  IMPLEMENTATION_PROOF_SIGNING.md  IMPLEMENTATION_S5_VECTOR_LOADING.md  IMPLEMENTATION_WEB_SEARCH.md  MIGRATION-ENV-VARS-REQUIRED.md  MODEL_GOVERNANCE.md  MULTI_CHAIN_CONFIG.md  (+11 more)
docs/archive/: BENCHMARKS.md  DEPLOYMENT_PROCEDURES.md  ENHANCED_S5_DEPLOYMENT.md  INTEGRATION_STATUS.md  LLAMA_CPP_INTEGRATION.md  NIGHTLY_RUST_GUIDE.md  SDK_DEVELOPER_MESSAGE.md  TESTING_ENHANCED_S5_INTEGRATION.md
docs/compute-contracts-reference/: API_REFERENCE.md  ARCHITECTURE.md  BREAKING_CHANGES.md  CONTRACT_ADDRESSES.md  DEPLOYMENT.md  HOST_REGISTRATION_GUIDE.md  HostEarnings.md  JobMarketplace.md  MIGRATION-NODE-DEVELOPER.md  MODEL_REGISTRY_DEPLOYMENT.md  NODE-MIGRATION-JAN2026.md  NodeRegistry.md  PRE-REPORT-REMEDIATION-NODE.md  PROOF_STORAGE_CONTRACT_CHANGES.md  PaymentEscrow.md  ProofSystem.md  SECURITY-AUDIT-NODE-MIGRATION.md  escrow-management.js  register-node.js  staking-guide.md
docs/models/: GPT-OSS-120B-REGISTRATION.md
docs/phase-4.3.1/: FINAL_PHASE_4.3.1.md
docs/sdk-reference/: HOST_EMBEDDING_IMPLEMENTATION.md  IMPLEMENTATION_RAG.md  NODE_CHECKPOINT_SPEC.md  NODE_V8.13.0_AUDIT_F4_MIGRATION.md  SDK_REQUIREMENTS_ALIGNMENT_ANALYSIS.md  WEBSOCKET_API_SDK_GUIDE.md
examples/: demo_fixed.rs  download_and_test.rs  rag_integration.rs  real_llm_test.rs  simple_llama_test.rs  test_ai.rs  test_inference.rs  test_minimal.rs  test_streaming.rs
keys/: .gitignore
methods/guest/: Cargo.toml
methods/guest/.cargo/: config.toml
methods/guest/src/: main.rs
scripts/: README.md  benchmark_risc0_gpu.sh  check_vector_config.sh  download_diffusion_model.sh  download_embedding_model.sh  download_florence_model.sh  download_gpt_oss_120b.sh  download_ocr_models.sh  download_vlm_model.sh  fix_vector_db.sh  generate_ezkl_keys.sh  register_gpt_oss_120b.sh  reset_vector_db.sh  setup_models.sh  start-with-s5-bridge.sh  test_dimensions.sh  test_gpt_oss_120b.sh  update_docker_compose_384d.sh  update_verify_384d.sh  validate-env.sh  verify_phase_4_2_1.sh  wait_and_verify.sh
scripts/phase-4.3.1/: start_real_s5.sh  test_phase_4.3.1_complete.sh  test_phase_4.3.1_full.sh
scripts/phase_4_2_2/: create_test_files.sh  disable_all_caching.sh  download_test_model.sh  fix_performance_imports.sh  phase_4_2_2_tests.sh  reliable_mock.py  (+7 more)
src/: job_assignment_types.rs  job_claim.rs  job_processor.rs  lib.rs  main.rs  model_validation.rs  p2p_config.rs  payment_claim.rs  result_submission.rs  version.rs
tests/: api_tests.rs  chains_tests.rs  checkpoint_tests.rs  client_tests.rs  contracts_tests.rs  crypto_simple.rs  crypto_tests.rs  dependencies_test.rs  diffusion_tests.rs  embeddings_tests.rs  ezkl_tests.rs  host_tests.rs  inference_tests.rs  integration_tests.rs  mod.rs  model_registry_test.rs  model_validation_tests.rs  models_tests.rs  monitoring_tests.rs  payments_tests.rs  performance_tests.rs  qa_tests.rs  rag_tests.rs  registration_tests.rs  results_tests.rs  risc0_tests.rs  s5_proof_storage_tests.rs  security_tests.rs  sessions_tests.rs  settlement_tests.rs  storage_tests.rs  stream_cancel_tests.rs  test_dht.rs  test_discovery.rs  test_gpt_oss_20b_inference.rs  test_job_assignment.rs  test_job_processor.rs  test_node_creation.rs  test_payments_integration.rs  test_protocols.rs  (+5 more)
(+573 files in other folders)
