[package]
name = "fabstir-llm-node"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.35", features = ["full"] }
libp2p = { version = "0.54", features = ["kad", "mdns", "noise", "tcp", "yamux", "websocket", "quic", "identify", "rendezvous", "macros", "serde", "tokio", "dns", "request-response"] }
futures = { version = "0.3", features = ["executor"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ethers = { version = "2.0", features = ["abigen", "ws"] }
rand = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
thiserror = "1.0"
asynchronous-codec = "0.7"
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
tokio-tungstenite = "0.21"
axum = { version = "0.7", features = ["ws", "json", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }

# LLM Inference  
llama-cpp-2 = { version = "0.1.55", features = ["cuda"] }

# Model Management  
hf-hub = "0.3"
sha2 = "0.10"
indicatif = "0.17"

# Caching
lru = "0.12"
zstd = "0.13"

# Output Formatting
regex = "1.10"
ammonia = "3.3"
pulldown-cmark = "0.9"

# Utils
tempfile = "3.8"
jsonwebtoken = "9.2"

# Storage
ipfs-api = "0.17"
flate2 = "1.0"

# Additional utils  
hex = "0.4"

# Result delivery dependencies
ciborium = "0.2"
ed25519-dalek = "2.1"
chrono = { version = "0.4", features = ["serde"] }
cid = "0.11"
multihash = "0.19"
bytes = "1.5"

# Storage dependencies
serde_cbor = "0.11"

# EZKL dependencies (for mock implementation)
blake3 = "1.5"

# System monitoring dependencies
sysinfo = "0.30"

# Encryption dependencies
aes-gcm = "0.10"
pbkdf2 = "0.12"
base64 = "0.22"

# End-to-End Encryption (Phase 6.2)
k256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"

# Production hardening dependencies  
toml = "0.8"
prometheus = "0.13"

# GDPR module dependencies
bs58 = "0.5"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"

# Optional: For future real EZKL integration (commented out for now)
# ezkl = { version = "7.0", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
futures-util = "0.3"
ethers = { version = "2.0", features = ["ws", "rustls"] }
tempfile = "3.8"
rand = "0.8"

[features]
default = ["inference"]
inference = []

# Optional: Add feature flag for real EZKL (for future use)
# real-ezkl = ["ezkl"]

[[test]]
name = "performance_tests"
path = "tests/performance/mod.rs"