# Copyright (c) 2025 Fabstir
# SPDX-License-Identifier: BUSL-1.1
[package]
name = "fabstir-llm-node"
version = "0.1.0"
edition = "2021"

# Risc0 zkVM configuration (Phase 1.1)
# Specifies guest program directories to compile
# Note: Paths are relative to workspace root
[package.metadata.risc0]
methods = ["methods/guest"]  # Will create this directory in Phase 1.2


[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
libp2p = { version = "0.54", features = ["kad", "mdns", "noise", "tcp", "yamux", "websocket", "quic", "identify", "rendezvous", "macros", "serde", "tokio", "dns", "request-response"] }
futures = { version = "0.3", features = ["executor"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ethers = { version = "2.0", features = ["abigen", "ws"] }
rand = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
thiserror = "1.0"
asynchronous-codec = "0.7"
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
tokio-tungstenite = "0.21"
axum = { version = "0.7", features = ["ws", "json", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }

# LLM Inference  
llama-cpp-2 = { version = "0.1.55", features = ["cuda"] }

# Model Management
hf-hub = "0.3"
sha2 = "0.10"
indicatif = "0.17"

# Embedding dependencies (Sub-phase 1.1 - Host-Side Embeddings)
# ONNX Runtime for sentence transformer inference (all-MiniLM-L6-v2)
# Used for /v1/embed endpoint - zero-cost embeddings for SDK clients
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "cuda"] }
tokenizers = "0.20"             # HuggingFace tokenizers for text preprocessing
ndarray = "0.16"                # N-dimensional arrays for tensor operations

# HNSW Index for fast vector search (Sub-phase 4.1 - HNSW Index Construction)
# Hierarchical Navigable Small World algorithm for approximate nearest neighbor search
# Used for searching large vector databases (10K-100K+ vectors) loaded from S5
hnsw_rs = "0.3"                 # Pure Rust HNSW implementation with serialization support

# Caching
lru = "0.12"
zstd = "0.13"

# Output Formatting
regex = "1.10"
ammonia = "3.3"
pulldown-cmark = "0.9"

# Utils
tempfile = "3.8"
jsonwebtoken = "9.2"

# Storage
ipfs-api = "0.17"
flate2 = "1.0"

# Additional utils  
hex = "0.4"

# Result delivery dependencies
ciborium = "0.2"
ed25519-dalek = "2.1"
chrono = { version = "0.4", features = ["serde"] }
cid = "0.11"
multihash = "0.19"
bytes = "1.5"

# Storage dependencies
serde_cbor = "0.11"

# S5 Decentralized Storage (Phase 2.1 - Off-Chain Proof Storage)
# Native Rust client for direct P2P connection to S5 network
# Used for storing STARK proofs (221KB) off-chain to avoid RPC size limits
s5 = "0.1"

# EZKL dependencies (for mock implementation)
blake3 = "1.5"

# System monitoring dependencies
sysinfo = "0.30"

# Encryption dependencies
aes-gcm = "0.10"
pbkdf2 = "0.12"
base64 = "0.22"

# End-to-End Encryption (Phase 6.2)
k256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Production hardening dependencies  
toml = "0.8"
prometheus = "0.13"

# GDPR module dependencies
bs58 = "0.5"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"

# Real Zero-Knowledge Proof Integration (Phase 1.1 - Risc0 zkVM)
# DECISION: Switched from EZKL to Risc0 zkVM (2025-10-14)
# Reason: EZKL designed for ML inference (wrong tool), Risc0 10x simpler
# Performance: 2-5s CPU proof generation, 194-281KB proofs (exceeds MVP requirements)
# To enable real ZK proofs:
#   1. Build with: cargo build --release --features real-ezkl
#
# NOTE: CUDA disabled due to vGPU incompatibility (NVIDIA A16-2Q)
# CPU proving is stable and reliable, just slightly slower than GPU
# System falls back to mock implementation when real-ezkl feature is disabled
risc0-zkvm = { version = "3.0", optional = true }

# Legacy EZKL dependencies (kept for reference, not used)
# ezkl = { git = "https://github.com/zkonduit/ezkl", rev = "40ce9df", optional = true }
# ark-std = { version = "0.4", optional = true }
# ark-ff = { version = "0.4", optional = true }
# ark-serialize = { version = "0.4", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
futures-util = "0.3"
ethers = { version = "2.0", features = ["ws", "rustls"] }
tempfile = "3.8"
rand = "0.8"

# For benchmarking EZKL performance (Phase 1.1)
criterion = "0.5"

[build-dependencies]
# Risc0 build system for compiling guest programs (Phase 1.1)
risc0-build = { version = "3.0", optional = true }

[features]
default = ["inference"]
inference = []

# Real ZK Proof feature flag (Phase 1.1 - Risc0 zkVM)
# Enable with: cargo build --features real-ezkl
# Includes Risc0 zkVM for STARK-based zero-knowledge proofs
# Performance: 0.2-2.3s generation, 194-281KB proofs, <1s verification
real-ezkl = ["risc0-zkvm", "risc0-build"]

[[test]]
name = "performance_tests"
path = "tests/performance/mod.rs"

[[bench]]
name = "embed_benchmark"
harness = false